Hitachi summer - fixing feedback from testing: footer overlap, heading breaking in wrong place, ios link colour in terms and conditions

--- a/assets/less/reece-hitachi-summer.less
+++ b/assets/less/reece-hitachi-summer.less
@@ -305,7 +305,7 @@ a.hitachi-tab-link {
 		position: absolute;
 		background-size: 100% auto;
 		background-repeat: no-repeat;
-		bottom: 65px;
+		bottom: 60px;
 		height: 56px;
 		left: 0;
 		background-image: url('/assets/images/hitachi-summer/content-bottom.png');
@@ -377,6 +377,8 @@ a.hitachi-tab-link {
 	}
 
 	strong { color: #000; }
+
+	a { color: #6d6e71; }
 }
 
 .hitachi-content-back {
